--- a/MXB105 Exam Notes.tex
+++ b/MXB105 Exam Notes.tex
@@ -1,6 +1,7 @@
-%!TEX program = xelatex
+%!TEX TS-program = xelatex
+%!TEX options = -aux-directory=Debug -shell-escape -file-line-error -interaction=nonstopmode -halt-on-error -synctex=1 "%DOC%"
 \documentclass{article}
-\usepackage{LaTeX-Submodule/template}
+\input{LaTeX-Submodule/template.tex}
 
 % Additional packages and macros
 \usepackage{changepage} % Modify page width
@@ -13,7 +14,7 @@
 	margin = 10mm
 }
 
-%% Hide horizontal rule 
+%% Hide horizontal rule
 \renewcommand{\headrulewidth}{0pt}
 
 %% Hide page numbers
@@ -45,21 +46,21 @@
         \centering
         \begin{tabular}{c c}
             \toprule
-            \(f(x)\)                               & \(f'(x)\)                                            \\
+            \(f\left( x \right)\)                                        & \(f'\left( x \right)\)                                        \\
             \midrule
-            \(u(x)v(x)\)                           & \(u'v + uv'\)                                        \\
-            \(\displaystyle\frac{u(x)}{v(x)}\)     & \(\displaystyle\frac{u'v - uv'}{v^2}\)               \\
-            \(u\bigl( v\left( x \right) \bigr)\)   & \(u'\bigl( v(x) \bigr)v'(x)\)                        \\
+            \(u\left( x \right)v\left( x \right)\)                       & \(u'v + uv'\)                                                 \\
+            \(\displaystyle\frac{u\left( x \right)}{v\left( x \right)}\) & \(\displaystyle\frac{u'v - uv'}{v^2}\)                        \\
+            \(u\bigl( v\left( x \right) \bigr)\)                         & \(u'\bigl( v\left( x \right) \bigr)v'\left( x \right)\)       \\
             \midrule
-            \(x^{n}\)                              & \(nx^{n - 1}\)                                       \\
-            \(\ln{\bigl( u\left(x\right) \bigr)}\) & \(\displaystyle\frac{u'(x)}{u(x)}\)                  \\
+            \(x^{n}\)                                                    & \(nx^{n - 1}\)                                                \\
+            \(\ln{\bigl( u\left(x\right) \bigr)}\)                       & \(\displaystyle\frac{u'\left( x \right)}{u\left( x \right)}\) \\
             \midrule
-            \(\sin{\left( ax \right)}\)            & \(a\cos{\left( ax \right)}\)                         \\
-            \(\cos{\left( ax \right)}\)            & \(-a\sin{\left( ax \right)}\)                        \\
-            \(\tan{\left( ax \right)}\)            & \(a\sec^2{\left( ax \right)}\)                       \\
-            \(\cot{\left( ax \right)}\)            & \(-a\csc^2{\left( ax \right)}\)                      \\
-            \(\sec{\left( ax \right)}\)            & \(a\sec{\left( ax \right)}\tan{\left( ax \right)}\)  \\
-            \(\csc{\left( ax \right)}\)            & \(-a\csc{\left( ax \right)}\cot{\left( ax \right)}\) \\
+            \(\sin{\left( ax \right)}\)                                  & \(a\cos{\left( ax \right)}\)                                  \\
+            \(\cos{\left( ax \right)}\)                                  & \(-a\sin{\left( ax \right)}\)                                 \\
+            \(\tan{\left( ax \right)}\)                                  & \(a\sec^2{\left( ax \right)}\)                                \\
+            \(\cot{\left( ax \right)}\)                                  & \(-a\csc^2{\left( ax \right)}\)                               \\
+            \(\sec{\left( ax \right)}\)                                  & \(a\sec{\left( ax \right)}\tan{\left( ax \right)}\)           \\
+            \(\csc{\left( ax \right)}\)                                  & \(-a\csc{\left( ax \right)}\cot{\left( ax \right)}\)          \\
             \bottomrule
         \end{tabular}
     \end{table}
@@ -82,10 +83,10 @@
     \end{align*}
     \section*{Integration Techniques}
     \begin{align*}
-        \int u \odif{v}                                          & = uv - \int v \odif{u} \\
-        \int f\bigl(g\left( x \right)\bigr)\odv{g(x)}{x} \odif{x} & = \int f(u) \odif{u}
+        \int u \odif{v}                                                        & = uv - \int v \odif{u}            \\
+        \int f\bigl(g\left( x \right)\bigr)\odv{g\left( x \right)}{x} \odif{x} & = \int f\left( u \right) \odif{u}
     \end{align*}
-    where \(u = g(x)\).
+    where \(u = g\left( x \right)\).
     \section*{Trigonometric Substitutions}
     \begin{table}[H]
         \centering
@@ -100,49 +101,49 @@
         \end{tabular}
     \end{table}
     \section*{L'Hôpital's Rule}
-    If \(\displaystyle \lim_{x\to x_0}f(x)=\lim_{x\to x_0}g(x)=0\) or \(\pm\infty\), then
-    \(\displaystyle \lim_{x\to x_0}\frac{f(x)}{g(x)} = \lim_{x\to x_0}\frac{f'(x)}{g'(x)}\).
+    If \(\displaystyle \lim_{x\to x_0}f\left( x \right)=\lim_{x\to x_0}g\left( x \right)=0\) or \(\pm\infty\), then
+    \(\displaystyle \lim_{x\to x_0}\frac{f\left( x \right)}{g\left( x \right)} = \lim_{x\to x_0}\frac{f'\left( x \right)}{g'\left( x \right)}\).
     \section*{Continuity}
-    \(f(x)\) continuous at \(c\) iff \(\displaystyle \lim_{x\to c} f(x) = f(c)\).
+    \(f\left( x \right)\) continuous at \(c\) iff \(\displaystyle \lim_{x\to c} f\left( x \right) = f\left( c \right)\).
 
-    \(f(x)\) is continuous on \(I:\left( a,\:b \right)\) if it is continuous
+    \(f\left( x \right)\) is continuous on \(I:\left( a,\:b \right)\) if it is continuous
     for all \(x\in I\).
 
-    \(f(x)\) is continuous on \(I:\left[ a,\:b \right]\) if it is continuous
+    \(f\left( x \right)\) is continuous on \(I:\left[ a,\:b \right]\) if it is continuous
     for all \(x\in I\), but only right continuous at \(a\) and left continuous at \(b\).
     \section*{Intermediate Value Theorem}
-    If \(f(x)\) is continuous on \(I:\left[ a, \: b \right]\) and \(f(a) \leq c \leq f(b)\), then \(\exists x\in I:f(x)=c\).
+    If \(f\left( x \right)\) is continuous on \(I:\left[ a, \: b \right]\) and \(f\left( a \right) \leq c \leq f\left( b \right)\), then \(\exists x\in I:f\left( x \right)=c\).
     \section*{Differentiability}
-    \(f(x)\) is differentiable at \(x=x_0\) iff
+    \(f\left( x \right)\) is differentiable at \(x=x_0\) iff
     \begin{equation*}
-        f'(x_0) = \lim_{x\to x_0} \frac{f(x)-f(x_0)}{x-x_0}
+        f'\left( x_0 \right) = \lim_{x\to x_0} \frac{f\left( x \right)-f\left( x_0 \right)}{x-x_0}
     \end{equation*}
     exists. This defines the derivative
     \begin{equation*}
-        f'(x_0) = \lim_{h\to 0} \frac{f(x_0+h)-f(x_0)}{h}.
+        f'\left( x_0 \right) = \lim_{h\to 0} \frac{f\left( x_0+h \right)-f\left( x_0 \right)}{h}.
     \end{equation*}
     Differentiability implies continuity.
     \section*{Mean Value Theorem}
-    If \(f(x)\) is continuous and differentiable on \(I:\left[ a,\:b \right]\), then
+    If \(f\left( x \right)\) is continuous and differentiable on \(I:\left[ a,\:b \right]\), then
     \begin{equation*}
-        \exists c\in I:f'(c)=\frac{f(b)-f(a)}{b-a}.
+        \exists c\in I:f'\left( c \right)=\frac{f\left( b \right)-f\left( a \right)}{b-a}.
     \end{equation*}
     \section*{Definite Integrals}
     \begin{equation*}
-        A = \int_a^b f(x) \odif{x}
+        A = \int_a^b f\left( x \right) \odif{x}
     \end{equation*}
     \section*{Fundamental Theorem of Calculus}
     \begin{align*}
-        \int_a^b \odv{x}F(x) \odif{x} & = F(b) - F(a) \\
-        \odv{x}\int_a^x f(t) \odif{t} & = f(x)
+        \int_a^b \odv{F\left( x \right)}{x} \odif{x} & = F\left( b \right) - F\left( a \right) \\
+        \odv*{\left( \int_a^x f\left( t \right) \odif{t} \right)}{x} & = f\left( x \right)
     \end{align*}
     \section*{Taylor Polynomials}
     \begin{equation*}
-        f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k
+        f\left( x \right) \approx p_n\left( x \right) = \sum_{k=0}^n \frac{f^{\left( k \right)}\left( x_0 \right)}{k!} \left( x-x_0 \right)^k
     \end{equation*}
     \section*{Taylor Series}
     \begin{equation*}
-        f(x) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(x_0)}{n!}\left( x-x_0 \right)^n
+        f\left( x \right) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}\left( x_0 \right)}{n!}\left( x-x_0 \right)^n
     \end{equation*}
     \textbf{Maclaurin Series:} \(x_0 = 0\).
     \section*{Common Maclaurin Series}
@@ -152,7 +153,7 @@
             \toprule
             \textbf{Function}           & \textbf{Series Term}                                          & \textbf{Conv.}             \\
             \midrule
-            \(e^{x}\)                  & \(\frac{x^n}{n!}\)                                            & all \(x\)                  \\
+            \(e^{x}\)                   & \(\frac{x^n}{n!}\)                                            & all \(x\)                  \\
             \(\sin{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n+1}}{\left( 2n+1 \right)!}\) & all \(x\)                  \\
             \(\cos{\left( x \right)}\)  & \(\left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}\)     & all \(x\)                  \\
             \(\frac{1}{1-x}\)           & \(x^n\)                                                       & \(\left( -1,\: 1 \right)\) \\
@@ -168,9 +169,8 @@
     Given \(a_i = \left( -1 \right)^i b_i\) and \(b_i>0\).
 
     If \(b_{i+1}\leqslant b_i\) \& \(\lim_{i\to\infty}b_i=0\), then
-    convergent, else inconclusive.
-    \section*{Ratio Test}
-    Given \(\rho = \lim_{i\to\infty}\abs{\frac{a_{i+1}}{a_i}}\):
+    convergent, else inconclusive. \section*{Ratio Test} Given \(\rho =
+    \lim_{i\to\infty}\abs{\frac{a_{i+1}}{a_i}}\):
     \begin{align*}
         \rho < 1 & : \text{convergent}   \\
         \rho > 1 & : \text{divergent}    \\
@@ -184,33 +184,37 @@
     \begin{equation*}
         L_c\left( f \right) = \bigl\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\bigr\}
     \end{equation*}
-    If \(f(x,\: y) \to L\) as \((x,\: y) \to (x_0,\: y_0)\), then
-    \(\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L\) along any smooth
+    If \(f\left( x,\: y \right) \to L\) as \(\left( x,\: y \right) \to \left( x_0,\: y_0 \right)\), then
+    \(\displaystyle \lim_{\left( x,\: y \right) \to \left( x_0,\: y_0 \right)} = L\) along any smooth
     curve. The limit does not exist if \(L\) changes along different smooth curves.
 
     \textbf{Partial Derivatives:} w.r.t one variable, others held constant.
 
-    \textbf{Gradient:} \(\symbf{\nabla} = \avec[\big]{\partial_{x_1},\: \partial_{x_2},\: \dots,\: \partial_{x_n}}\)
+    \textbf{Gradient:} \(\symbf{\nabla} = \abracket{\pdif*{x_1},\: \pdif*{x_2},\: \dots,\: \pdif*{x_n}}\)
     \section*{Multivariable Chain Rule}
-    For \(f=f\bigl(\symbfit{x}(t_1,\: \ldots,\: t_n)\bigr)\) with
-    \(\symbfit{x}=\mqty[x_1 & \cdots & x_m]\)
+    For \(f=f\bigl(\symbf{x}\left( t_1,\: \ldots,\: t_n \right)\bigr)\) with
+    \(\symbf{x}=
+    \begin{bmatrix}
+        x_1 & \cdots & x_m
+    \end{bmatrix}
+    \)
     \begin{equation*}
-        \pdv{f}{t_i} = \symbf{\nabla}f \cdot \partial_{t_i}\symbfit{x}.
+        \pdv{f}{t_i} = \symbf{\nabla}f \cdot \pdv{\symbf{x}}{t_i}.
     \end{equation*}
     \section*{Directional Derivatives}
     \begin{align*}
-        \symbf{\nabla}_{\symbfit{u}}f
-         & = \symbf{\nabla}f \cdot \symbfit{u}
+        \symbf{\nabla}_{\symbf{u}}f
+         & = \symbf{\nabla}f \cdot \symbf{u}
     \end{align*}
-    where \(\symbfit{u}\) is a unit vector and the slope is given by \(\norm{\symbf{\nabla}_{\symbfit{u}}f}\).
-    If \(\symbf{\nabla}_{\symbfit{u}}f=0\), \(\symbfit{u}\) is tangent to the level curve at \(\symbfit{x}_0\).
+    where \(\symbf{u}\) is a unit vector and the slope is given by \(\norm{\symbf{\nabla}_{\symbf{u}}f}\).
+    If \(\symbf{\nabla}_{\symbf{u}}f=0\), \(\symbf{u}\) is tangent to the level curve at \(\symbf{x}_0\).
     \begin{align*}
-        \max_{\norm{\symbfit{u}} = 1} \symbf{\nabla}_{\symbfit{u}}f = \symbf{\nabla}f
+        \max_{\norm{\symbf{u}} = 1} \symbf{\nabla}_{\symbf{u}}f = \symbf{\nabla}f
     \end{align*}
-    If \(\symbf{\nabla}f\neq 0\), \(\symbf{\nabla}f\) is a normal vector to the level curve at \(\symbfit{x}_0\).
+    If \(\symbf{\nabla}f\neq 0\), \(\symbf{\nabla}f\) is a normal vector to the level curve at \(\symbf{x}_0\).
     \section*{Critical Points}
-    \((x_0,\: y_0)\) is a critical point if \(\symbf{\nabla}f(x_0,\: y_0) = \symbf{0}\)
-    or if \(\symbf{\nabla}f(x_0,\: y_0)\) is undefined.
+    \(\left( x_0,\: y_0 \right)\) is a critical point if \(\symbf{\nabla}f\left( x_0,\: y_0 \right) = \symbf{0}\)
+    or if \(\symbf{\nabla}f\left( x_0,\: y_0 \right)\) is undefined.
     \section*{Classification of Critical Points}
     \begin{equation*}
         D = f_{xx}f_{yy} - \left( f_{xy} \right)^2
@@ -223,19 +227,19 @@
     \end{description}
     \section*{Double Integrals}
     The volume of the solid
-    enclosed between the surface \(z=f(x,\: y)\) and the region \(\Omega\) is
+    enclosed between the surface \(z=f\left( x,\: y \right)\) and the region \(\Omega\) is
     defined by
     \begin{equation*}
-        V = \iint\limits_{\Omega} f(x,\: y) \odif{A}.
+        V = \iint\limits_{\Omega} f\left( x,\: y \right) \odif{A}.
     \end{equation*}
     If \(\Omega\) is a region bounded by \(a \leq x \leq b\) and \(c \leq y \leq d\), then
     \begin{align*}
-        \iint\limits_{\Omega} f(x,\: y) \odif{A} & = \int_c^d\int_a^b f(x,\: y) \odif{x} \odif{y} \\
-                                               & = \int_a^b\int_c^d f(x,\: y) \odif{y} \odif{x}
+        \iint\limits_{\Omega} f\left( x,\: y \right) \odif{A} & = \int_c^d\int_a^b f\left( x,\: y \right) \odif{x} \odif{y} \\
+                                                              & = \int_a^b\int_c^d f\left( x,\: y \right) \odif{y} \odif{x}
     \end{align*}
     \section*{Type I Regions}
     \begin{equation*}
-        \iint\limits_{\Omega} f(x,\: y) \odif{A} = \int_a^b\int_{g_1(x)}^{g_2(x)} f(x,\: y) \odif{y} \odif{x}
+        \iint\limits_{\Omega} f\left( x,\: y \right) \odif{A} = \int_a^b\int_{g_1}^{g_2} f\left( x,\: y \right) \odif{y} \odif{x}
     \end{equation*}
     \textbf{Bounded left \& right by:}
     \begin{equation*}
@@ -243,51 +247,50 @@
     \end{equation*}
     \textbf{Bounded below \& above by:}
     \begin{equation*}
-        y=g_1(x) \text{ and } y=g_2(x)
+        y=g_1\left( x \right) \text{ and } y=g_2\left( x \right)
     \end{equation*}
-    where \(g_1(x) \leq g_2(x)\) for \(a \leq x \leq b\):
+    where \(g_1\left( x \right) \leq g_2\left( x \right)\) for \(a \leq x \leq b\):
     \section*{Type II Regions}
     \begin{equation*}
-        \iint\limits_{\Omega} f(x,\: y) \odif{A} = \int_c^d\int_{h_1(x)}^{h_2(x)} f(x,\: y) \odif{x} \odif{y}
+        \iint\limits_{\Omega} f\left( x,\: y \right) \odif{A} = \int_c^d\int_{h_1}^{h_2} f\left( x,\: y \right) \odif{x} \odif{y}
     \end{equation*}
     \textbf{Bounded left \& right by:}
     \begin{equation*}
-        x=h_1(y) \text{ and } x=h_2(y)
+        x=h_1\left( y \right) \text{ and } x=h_2\left( y \right)
     \end{equation*}
     \textbf{Bounded below \& above by:}
     \begin{equation*}
         y=c \text{ and } y=d
     \end{equation*}
-    where \(h_1(y) \leq h_2(y)\) for \(c \leq y \leq d\).
-
-    To integrate, solve the inner integrals first.
+    where \(h_1\left( y \right) \leq h_2\left( y \right)\) for
+    \(c \leq y \leq d\). To integrate, solve the inner integrals first.
     \section*{Vector Valued Functions}
     \begin{equation*}
         \symbf{r}:\mathbb{R} \to \mathbb{R}^n
     \end{equation*}
-    The \textbf{domain} of \(\symbf{r}(t)\) is the intersection of the domains
-    of its components.
-
-    The \textbf{orientation} of \(\symbf{r}(t)\) is the direction of motion along the
-    curve as the value of the parameter increases.
-
-    \textbf{Limits}, \textbf{derivatives} and \textbf{integrals} are all \textit{component-wise}. Each component has its \underline{own} constant of integration.
+    The \textbf{domain} of \(\symbf{r}\left( t \right)\) is the
+    intersection of the domains of its components.
+    The \textbf{orientation} of \(\symbf{r}\left( t \right)\) is the
+    direction of motion along the curve as the value of the parameter
+    increases. \textbf{Limits}, \textbf{derivatives} and
+    \textbf{integrals} are all \textit{component-wise}. Each component
+    has its \underline{own} constant of integration.
     \section*{Parametric Lines}
     \begin{equation*}
-        \symbf{l}(t) = \symbfit{P}_0 + t\symbfit{v}
+        \symbf{l}\left( t \right) = \symbf{P}_0 + t\symbf{v}
     \end{equation*}
-    where \(\symbf{l}(t)\) passes through \(\symbfit{P}_0\), and is parallel to \(\symbfit{v}\).
+    where \(\symbf{l}\left( t \right)\) passes through \(\symbf{P}_0\), and is parallel to \(\symbf{v}\).
     \section*{Tangent Lines}
-    If \(\symbf{r}(t)\) is differentiable at
-    \(t_0\) and \(\symbf{r'}(t_0)\ne\symbf{0}\)
+    If \(\symbf{r}\left( t \right)\) is differentiable at
+    \(t_0\) and \(\symbf{r'}\left( t_0 \right)\ne\symbf{0}\)
     \begin{equation*}
-        \symbf{l}(t) = \symbf{r}(t_0)+t\symbf{r'}(t_0).
+        \symbf{l}\left( t \right) = \symbf{r}\left( t_0 \right)+t\symbf{r'}\left( t_0 \right).
     \end{equation*}
     \section*{Curves of Intersection}
     Choose one of the variables as the parameter, and express the remaining variables in terms of that parameter.
     \section*{Arc Length}
     \begin{equation*}
-        S = \int_a^b \norm{\symbf{r'}(t)} \odif{t}
+        S = \int_a^b \norm{\symbf{r'}\left( t \right)} \odif{t}
     \end{equation*}
     \section*{Ordinary Differential Equations}
     \textbf{Order:} highest derivative in DE\@.
@@ -295,9 +298,9 @@
     \textbf{Autonomous DE:} does not depend explicitly on the independent variable.
     \section*{Qualitative Analysis}
     \begin{equation*}
-        \odv{y}{t} = f(y)
+        \odv{y}{t} = f\left( y \right)
     \end{equation*}
-    A fixed point is the value of \(y\) for which \(f(y) = 0\).
+    A fixed point is the value of \(y\) for which \(f\left( y \right) = 0\).
     \section*{Stability of Fixed Points}
     Given a positive/negative perturbation from a fixed point, that point is
 
@@ -307,77 +310,77 @@
 
     \textbf{Semi-Stable:} if one tends toward FP, and another tends away from FP
     \section*{Directly Integrable ODEs}
-    For \(\odv{y}{x} = f(x)\):
+    For \(\odv{y}{x} = f\left( x \right)\):
     \begin{equation*}
-        y(x) = \int f(x) \odif{x}.
+        y\left( x \right) = \int f\left( x \right) \odif{x}.
     \end{equation*}
     \section*{Separable ODEs}
-    For \(\odv{y}{x} = p(x) q(y)\):
+    For \(\odv{y}{x} = p\left( x \right) q\left( y \right)\):
     \begin{equation*}
-        \int \frac{1}{q(y)} \odv{y}{x} \odif{x} = \int p(x) \odif{x}.
+        \int \frac{1}{q\left( y \right)} \odv{y}{x} \odif{x} = \int p\left( x \right) \odif{x}.
     \end{equation*}
     \section*{Linear ODEs}
-    For \(\odv{y}{x} + p(x)y = q(x)\), use the \textit{integrating factor}:
-    \(I(x) = e^{\int p(x) \odif{x}}\), so that
+    For \(\odv{y}{x} + p\left( x \right)y = q\left( x \right)\), use the \textit{integrating factor}:
+    \(I\left( x \right) = e^{\int p\left( x \right) \odif{x}}\), so that
     \begin{equation*}
-        y(x) = \frac{1}{I(x)} \int I(x) q(x) \odif{x}.
+        y\left( x \right) = \frac{1}{I\left( x \right)} \int I\left( x \right) q\left( x \right) \odif{x}.
     \end{equation*}
     \section*{Exact ODEs}
-    \(P(x,\: y) + Q(x,\: y)\odv{y}{x} = 0\)
+    \(P\left( x,\: y \right) + Q\left( x,\: y \right)\odv{y}{x} = 0\)
     has the solution
-    \(\Psi(x,\: y) = c\)
+    \(\Psi\left( x,\: y \right) = c\)
     iff it is exact, namely, when
     \(P_y = Q_x\),
     where \(P = \Psi_x\) and \(Q = \Psi_y\). Then
     \begin{gather*}
-        \Psi(x,\: y) = \int P(x,\: y) \odif{x} + f(y) \\
-        \Psi(x,\: y) = \int Q(x,\: y) \odif{y} + g(x)
+        \Psi\left( x,\: y \right) = \int P\left( x,\: y \right) \odif{x} + f\left( y \right) \\
+        \Psi\left( x,\: y \right) = \int Q\left( x,\: y \right) \odif{y} + g\left( x \right)
     \end{gather*}
-    and \(f(y)\) and \(g(x)\) can be determined by solving these equations simultaneously.
+    and \(f\left( y \right)\) and \(g\left( x \right)\) can be determined by solving these equations simultaneously.
     \section*{Second-Order ODEs}
     \begin{equation*}
-        a_2(x)y'' + a_1(x)y' + a_0(x)y = F(x)
+        a_2\left( x \right)y'' + a_1\left( x \right)y' + a_0\left( x \right)y = F\left( x \right)
     \end{equation*}
     \section*{Initial Values}
     \begin{align*}
-        y(x_0) = y_0 \quad y'(x_0) = y_1
+        y\left( x_0 \right) = y_0 \quad y'\left( x_0 \right) = y_1
     \end{align*}
     \section*{Boundary Values}
     \begin{align*}
-        y(x_0) = y_0 \quad y(x_1) = y_1
+        y\left( x_0 \right) = y_0 \quad y\left( x_1 \right) = y_1
     \end{align*}
     \section*{Reduction of Order}
     \begin{equation*}
-        y_2(x) = v\left(x\right) y_1(x)
+        y_2\left( x \right) = v\left(x\right) y_1\left( x \right)
     \end{equation*}
-    \(v(x)\) can be determined by substituting \(y_2\) into the ODE, using \(w(x) = v'(x)\).
+    \(v\left( x \right)\) can be determined by substituting \(y_2\) into the ODE, using \(w\left( x \right) = v'\left( x \right)\).
     \section*{General Solution}
     \begin{equation*}
-        y(x) = y_H(x) + y_P(x)
+        y\left( x \right) = y_H\left( x \right) + y_P\left( x \right)
     \end{equation*}
     \section*{Homogeneous Solution}
     \begin{equation*}
-        y_H(x) = e^{\lambda x}
+        y_H\left( x \right) = e^{\lambda x}
     \end{equation*}
     \section*{Real Distinct Roots}
     \begin{equation*}
-        y_H(x) = c_1e^{\lambda_1 x} + c_2e^{\lambda_2 x}
+        y_H\left( x \right) = c_1e^{\lambda_1 x} + c_2e^{\lambda_2 x}
     \end{equation*}
     \section*{Real Repeated Roots}
     \begin{equation*}
-        y_H(x) = c_1e^{\lambda x} + c_2 te^{\lambda x}
+        y_H\left( x \right) = c_1e^{\lambda x} + c_2 te^{\lambda x}
     \end{equation*}
     \section*{Complex Conjugate Roots}
     Given \(\lambda = \alpha \pm \beta i\):
     \begin{equation*}
-        y_H(x) = e^{\alpha x}\bigl( c_1\cos{\left( \beta x \right)} + c_2 \sin{\left( \beta x \right)} \bigr)
+        y_H\left( x \right) = e^{\alpha x}\bigl( c_1\cos{\left( \beta x \right)} + c_2 \sin{\left( \beta x \right)} \bigr)
     \end{equation*}
     \section*{Particular Solution}
     \emph{See table below.}
     Substitute \(y_P\) into the nonhomogeneous ODE, and solve the undetermined coefficients.
     \section*{Spring and Mass Systems}
     \begin{equation*}
-        m y'' + \gamma y' + k y = f(t)
+        m y'' + \gamma y' + k y = f\left( t \right)
     \end{equation*}
     \textbf{Newton's Law:} \(F = m y''\)
 
@@ -385,40 +388,41 @@
 
     \textbf{Damping force:} \(F_d = -\gamma y'\)
     \begin{align*}
-        m      & : \text{mass}    & k    & : \text{spring constant} \\
-        \gamma & : \text{damping} & f(t) & : \text{external force}
+        m      & : \text{mass}    & k                 & : \text{spring constant} \\
+        \gamma & : \text{damping} & f\left( t \right) & : \text{external force}
     \end{align*}
     \section*{Electrical Circuits}
     The sum of voltages around a loop equals 0.
     \begin{align*}
-        v(t) - iR - L \odv{i}{t} - \frac{q}{C}      & = 0    \\
-        L \odv[2]{q}{t} + R\odv{q}{t} + \frac{1}{C}q & = v(t)
+        v\left( t \right) - iR - L \odv{i}{t} - \frac{q}{C} & = 0                 \\
+        L \odv[2]{q}{t} + R\odv{q}{t} + \frac{1}{C}q        & = v\left( t \right)
     \end{align*}
     where \(\displaystyle i = \odv{q}{t}\).
     \section*{Voltage drop across various elements:}
     \begin{align*}
-        v_R & = iR          \\
-        v_C & = \frac{q}{C} \\
+        v_R & = iR           \\
+        v_C & = \frac{q}{C}  \\
         v_L & = L \odv{i}{t}
     \end{align*}
     \begin{align*}
-        R & : \text{resistance} & C    & : \text{capacitance}    \\
-        L & : \text{inductance} & v(t) & : \text{voltage supply}
+        R & : \text{resistance} & C                 & : \text{capacitance}    \\
+        L & : \text{inductance} & v\left( t \right) & : \text{voltage supply}
     \end{align*}
 \end{multicols}
 \begin{table}[H]
     \centering
     \begin{tabular}{c c}
         \toprule
-        \(F(x)\)                                                               & \(y_P(x)\)                                                                \\
+        \(F\left( x \right)\)                                                  & \(y_P\left( x \right)\)                                                   \\
         \midrule
         a constant                                                             & A                                                                         \\
-        a polynomial of degree \(n\)                                           & \(\displaystyle \sum_{i = 0}^n A_i x^i\)                                  \\
-        \(e^{kx}\)                                                            & \(A e^{kx}\)                                                             \\
+        a polynomial of degree \(n\)                                           & \(\sum_{i = 0}^n A_i x^i\)                                  \\
+        \(e^{kx}\)                                                             & \(A e^{kx}\)                                                              \\
         \(\cos{\left( \omega x \right)}\) or \(\sin{\left( \omega x \right)}\) & \(A_0 \cos{\left( \omega x \right)} + A_1 \sin{\left( \omega x \right)}\) \\
         a combination of the above                                             & a combination of the above                                                \\
-        linearly dependent to \(y_H(x)\)                                       & multiply \(y_P(x)\) by \(x\) until linearly independent                   \\
+        linearly dependent to \(y_H\left( x \right)\)                          & multiply \(y_P\left( x \right)\) by \(x\) until linearly independent      \\
         \bottomrule
     \end{tabular}
 \end{table}
-\end{document} % chktex 17
+\end{document}
+% chktex 17
